--- a/info.plist
+++ b/info.plist
@@ -125,7 +125,7 @@ This workflow inspired from the Trys Mudford's [Arrows](https://arrows.trysmudfo
 	<key>variablesdontexport</key>
 	<array/>
 	<key>version</key>
-	<string>2025.06.21</string>
+	<string>2025.06.21_01</string>
 	<key>webaddress</key>
 	<string>https://saneef.com</string>
 </dict>
